fixed fleet ref not showing

--- a/src/Components/ProfilePanel/styles/index.scss
+++ b/src/Components/ProfilePanel/styles/index.scss
@@ -57,7 +57,7 @@
         &-content {
           .rs {
             &-input {
-            font-size: 1.05rem !important;
+            font-size: 1.05rem;
             padding: 4px 11px;
             color: $secondaryDark;
             }
