--- a/src/Components/SingleTagCell/styles/index.scss
+++ b/src/Components/SingleTagCell/styles/index.scss
@@ -1,7 +1,7 @@
 .single-tag {
   &-input {
     transform: translateY(-6px);
-    font-size: 12px;
+    font-size: 0.7rem !important;
   }
   &-button { 
     transform: translateY(-6px);
