--- a/src/globalStyles/index.scss
+++ b/src/globalStyles/index.scss
@@ -82,7 +82,7 @@ body {
       &-dropdown-menu {
         width: 100%;
         .rs-icon {
-          margin-right: 15px;
+          margin-right: 10px;
         }
       }
   
